--- a/.github/workflows/daily_trading.yml
+++ b/.github/workflows/daily_trading.yml
@@ -25,8 +25,5 @@ jobs:
         pip install yfinance pandas matplotlib alpaca-trade-api
 
     - name: Run trading strategy
-      env:
-        ALPACA_API_KEY: ${{ secrets.ALPACA_API_KEY }}
-        ALPACA_API_SECRET: ${{ secrets.ALPACA_API_SECRET }}
       run: |
-        python trading_strategy.py
+        python main.py
