--- a/.github/workflows/daily_trading.yml
+++ b/.github/workflows/daily_trading.yml
@@ -2,8 +2,8 @@ name: Daily Trading Strategy
 
 on:
   schedule:
-    # Runs at 00:00 UTC every day (adjust this time as needed)
-    - cron: '0 0 * * *'
+    # Runs at 9:30 AM EST every day (14:30 UTC)
+    - cron: '30 14 * * *'
   workflow_dispatch:  # Allows manual trigger of the workflow
 
 jobs:
@@ -12,7 +12,7 @@ jobs:
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -22,8 +22,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install yfinance pandas matplotlib alpaca-trade-api
+        pip install yfinance pandas matplotlib alpacha
 
     - name: Run trading strategy
+      env:
+        ALPACA_API_KEY: ${{ secrets.ALPACA_API_KEY }}
+        ALPACA_SECRET_KEY: ${{ secrets.ALPACA_SECRET_KEY }}
       run: |
         python main.py
