--- a/.github/workflows/daily_trading.yml
+++ b/.github/workflows/daily_trading.yml
@@ -22,7 +22,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install yfinance pandas matplotlib alpacha
+        pip install yfinance pandas matplotlib alpaca-trade-api
 
     - name: Run trading strategy
       env:
